# JSONParser

./: README.md
CMakeTestProject/: CMakeLists.txt  ai_processor_module.pyd  app.py
CMakeTestProject/src/: ai_processor.cpp  bindings.cpp
